Change region/domain to vagrant-local from global
The hashicorp nomad examples and the command-line default use the
'global' region. To match, I've been using '.global', but 'global' is a
top-level domain and should be avoided for local development. Instead,
make it clear this is a local vagrant env, and the domain should match.
The scripts have been updated to use *.vagrant.local for certificates
and /etc/hosts entries and configs.

--- a/hashicorp/nginx.conf.erb
+++ b/hashicorp/nginx.conf.erb
@@ -21,16 +21,16 @@ http {
 
   server {
     listen 443 ssl;
-    server_name hashistack.global;
+    server_name hashistack.vagrant-local;
 
-    ssl_certificate /etc/nomad.d/global-cli-nomad.pem;
-    ssl_certificate_key /etc/nomad.d/global-cli-nomad-key.pem;
+    ssl_certificate /etc/nomad.d/vagrant-local-cli-nomad.pem;
+    ssl_certificate_key /etc/nomad.d/vagrant-local-cli-nomad-key.pem;
 
     location / {
       proxy_pass https://hashistack;
 
-      proxy_ssl_certificate /etc/nomad.d/global-cli-nomad.pem;
-      proxy_ssl_certificate_key /etc/nomad.d/global-cli-nomad-key.pem;
+      proxy_ssl_certificate /etc/nomad.d/vagrant-local-cli-nomad.pem;
+      proxy_ssl_certificate_key /etc/nomad.d/vagrant-local-cli-nomad-key.pem;
       proxy_ssl_trusted_certificate /etc/nomad.d/nomad-agent-ca.pem;
 
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
