--- a/hashicorp/nomad-server.hcl.erb
+++ b/hashicorp/nomad-server.hcl.erb
@@ -1,5 +1,6 @@
-# Leader config file
 datacenter = "vagrant"
+region     = "vagrant-local"
+
 data_dir   = "/opt/nomad/data"
 bind_addr  = "0.0.0.0"
 
@@ -10,9 +11,10 @@ server {
   bootstrap_expect = <%= CLUSTER_SIZE %>
 
   server_join {
+
     retry_join = [
     <%- servers.each do |server| -%>
-      "<%= server[:name] %>"
+      "<%= server[:name] %>",
     <%- end -%>
     ]
 
@@ -30,8 +32,8 @@ tls {
     rpc  = true
 
     ca_file   = "/etc/nomad.d/nomad-agent-ca.pem"
-    cert_file = "/etc/nomad.d/global-server-nomad.pem"
-    key_file  = "/etc/nomad.d/global-server-nomad-key.pem"
+    cert_file = "/etc/nomad.d/vagrant-local-server-nomad.pem"
+    key_file  = "/etc/nomad.d/vagrant-local-server-nomad-key.pem"
 
 
     # If verify_server_hostname is set to false, the node's certificate will be
