--- a/hashicorp/nomad-server.hcl.erb
+++ b/hashicorp/nomad-server.hcl.erb
@@ -1,5 +1,5 @@
-datacenter = "vagrant"
-region     = "vagrant-local"
+datacenter = "local"
+region     = "local"
 
 data_dir   = "/opt/nomad/data"
 bind_addr  = "0.0.0.0"
@@ -32,8 +32,8 @@ tls {
     rpc  = true
 
     ca_file   = "/etc/nomad.d/nomad-agent-ca.pem"
-    cert_file = "/etc/nomad.d/vagrant-local-server-nomad.pem"
-    key_file  = "/etc/nomad.d/vagrant-local-server-nomad-key.pem"
+    cert_file = "/etc/nomad.d/local-server-nomad.pem"
+    key_file  = "/etc/nomad.d/local-server-nomad-key.pem"
 
 
     # If verify_server_hostname is set to false, the node's certificate will be
