Refactor init.sh better variable order and names

--- a/hashicorp/vault.hcl.erb
+++ b/hashicorp/vault.hcl.erb
@@ -3,7 +3,7 @@
 cluster_name = "sandbox-local"
 ui = true
 log_level = "info"
-api_addr = "https:/<%= hostname %>:8200"
+api_addr = "https://<%= hostname %>:8200"
 cluster_addr = "https://<%= hostname %>:8201"
 
 listener "tcp" {
